# Execution-Manager

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  meson.build  state_sender.py
api/: CMakeLists.txt  meson.build
api/ApplicationStateClient/: CMakeLists.txt
api/MachineStateClient/: CMakeLists.txt
api/application_state_client/: CMakeLists.txt  meson.build
api/application_state_client/include/: application_state_client.h  i_adaptive_app.hpp  i_application_state_client_wrapper.h  i_application_state_client_wrapper.hpp  i_state.hpp  i_state_factory.hpp
api/application_state_client/src/: application_state_client.cpp  i_adaptive_app.cpp  i_application_state_client_wrapper.cpp  i_state.cpp
api/application_state_client/test/: CMakeLists.txt  application_state_client_test.cpp
api/base_client/: CMakeLists.txt
api/base_client/include/: client.hpp  proxy_client_factory.hpp
api/base_client/src/: client.cpp  proxy_client_factory.cpp
api/base_server/: CMakeLists.txt
api/base_server/include/: connection.hpp  connection_factory.hpp  server.hpp
api/base_server/src/: connection.cpp  connection_factory.cpp  server.cpp
api/component_client/: CMakeLists.txt  meson.build
api/component_client/include/: component_client.h  i_component_client_wrapper.hpp
api/component_client/src/: component_client.cpp
api/component_client/test/: CMakeLists.txt  component_client_test.cpp
api/execution_management_api/: CMakeLists.txt
api/include/: i_adaptive_app.hpp  i_application_handler.hpp  i_client.hpp  i_client_socket.hpp  i_connection.hpp  i_connection_factory.hpp  i_execution_manager_client.hpp  i_manifest_reader.hpp  i_mean_calculator.hpp  i_os_interface.hpp  i_proxy_client_factory.hpp  i_server.hpp  i_server_socket.hpp  i_socket.hpp  i_socket_interface.hpp  i_socket_server.hpp  i_state_factory.hpp
api/machine_state_client/: CMakeLists.txt  meson.build
api/persistent_storage/: CMakeLists.txt
api/socket_handler/: CMakeLists.txt
applications/: AdaptiveApplication.cmake  CMakeLists.txt  meson.build
applications/AdaptiveApplication1/: CMakeLists.txt  manif1.json  manifest.json  meson.build  proc1.service
applications/AdaptiveApplication2/: CMakeLists.txt  manif2.json  manifest.json  meson.build  proc2.service  proc3.service
applications/AdaptiveApplications/: CMakeLists.txt
applications/ExecutionManager/: CMakeLists.txt  machine_manifest.json  meson.build
applications/MachineStateManager/: CMakeLists.txt  manifest.json  meson.build  msm.service
applications/SimpleApplication/: CMakeLists.txt  manifest.json
applications/TestApp1/: CMakeLists.txt  manifest.json
applications/TestApp2/: CMakeLists.txt  manifest.json
common/: CMakeLists.txt  meson.build
common/application_state_client/: CMakeLists.txt
common/base_client/: CMakeLists.txt
common/base_server/: CMakeLists.txt
common/component/: CMakeLists.txt
common/include/: common.hpp  constants.hpp  i_adaptive_app.hpp  i_application_handler.hpp  i_component_client_wrapper.hpp  i_execution_manager_client.hpp  i_machine_state_client_wrapper.hpp  i_manifest_reader.hpp  i_os_interface.hpp  i_socket.hpp  i_socket_interface.hpp  i_socket_server.hpp  i_state.hpp  i_state_factory.hpp  logger.hpp  manifest_reader.hpp  manifests.hpp  mocks.hpp  safe_queue.hpp  string_safe_queue.hpp
common/machine_state_client/: CMakeLists.txt
common/other/: CMakeLists.txt
common/other/include/: common.hpp  (+4 more)
common/socket_handler/: CMakeLists.txt
common/src/: common.cpp  i_application_state_client_wrapper.cpp  i_component_client_wrapper.cpp  i_machine_state_client_wrapper.cpp  i_machine_state_manager_mock.cpp  logger.cpp  manifest_reader.cpp  mocks.cpp  safe_queue.cpp  string_safe_queue.cpp
common/test/: CMakeLists.txt  application_name_test.cpp  thread_safe_queue_test.cpp
interfaces/: CMakeLists.txt
interfaces/include/: i_client.hpp  i_client_factory.hpp  i_client_maker.hpp  i_client_socket.hpp  i_connection.hpp  i_connection_factory.hpp  i_manifest_reader.hpp  i_os_interface.hpp  i_proxy_client_factory.hpp  i_server.hpp  i_server_socket.hpp  i_socket.hpp  i_socket_interface.hpp  i_socket_server.hpp  i_state.hpp  i_state_factory.hpp
mocks/: CMakeLists.txt
mocks/include/: app_state_client_mock.hpp  client_factory_mock.hpp  client_mock.hpp  client_socket_mock.hpp  component_client_mock.hpp  connection_factory_mock.hpp  connection_mock.hpp  i_client_maker_mock.hpp  i_client_mock.hpp  i_server_mock.hpp  i_socket_interface_mock.hpp  i_state_mock.hpp  machine_state_client_mock.hpp  persistent_storage_mock.hpp  proxy_client_factory_mock.hpp  server_mock.hpp  server_socket_mock.hpp
per/: CMakeLists.txt  meson.build
per/include/: keyvaluestorage.h  kvstype.h
per/src/: keyvaluestorage.cpp  kvstype.cpp
per/test/: CMakeLists.txt  keyvaluestorage_tests.cpp  kvstype_tests.cpp
test/: CMakeLists.txt  meson.build
test/AdaptiveApplication/: CMakeLists.txt  aa_event_mode_test.cpp  aa_polling_mode_test.cpp  aa_test.cpp  mean_calculator_test.cpp  state_test.cpp
test/ApplicationStateClient/: CMakeLists.txt  application_state_client_test.cpp  meson.build
test/BaseClient/: CMakeLists.txt  client_test.cpp  proxy_client_factory_test.cpp
test/BaseServer/: CMakeLists.txt  connection_test.cpp  server_test.cpp
test/Common/: CMakeLists.txt  application_name_test.cpp  thread_safe_queue_test.cpp
test/ComponentClient/: CMakeLists.txt  component_client_test.cpp
test/ExecutionManager/: CMakeLists.txt  application_handler_test.cpp  em_client_test.cpp  execution_manager_test.cpp  manifest_reader_test.cpp  meson.build  msm_register_test.cpp
test/MachineStateClient/: CMakeLists.txt  machine_state_client_test.cpp
test/MachineStateManager/: CMakeLists.txt  msm_test.cpp  socket_server_test.cpp  state_machine_test.cpp
test/SocketHandler/: CMakeLists.txt  client_socket_test.cpp  client_socket_tests.cpp  client_test.cpp  connection_test.cpp  connection_tests.cpp  proxy_client_factory_test.cpp  server_socket_test.cpp  server_test.cpp  socket_server_test.cpp
test/mocks/: CMakeLists.txt  meson.build
(+264 files in other folders)
