set(COMMON_NAMESPACE_NAME common)
set(SOCKET_HANDLER_NAMESPACE_NAME socket_handler)
set(BASE_CLIENT_NAMESPACE_NAME base_client)
set(BASE_SERVER_NAMESPACE_NAME base_server)
set(APPLICATION_STATE_NAMESPACE_NAME application_state)
set(COMPONENT_CLIENT_NAMESPACE_NAME component_client)
set(MACHINE_STATE_CLIENT_NAMESPACE_NAME machine_state_client)

add_subdirectory(machine_state_client)
add_subdirectory(application_state_client)
add_subdirectory(component)
add_subdirectory(socket_handler)
add_subdirectory(base_client)
add_subdirectory(base_server)
add_subdirectory(other)
